--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "{{PACKAGE_NAME}}",
+  "name": "propresenter-parser",
   "version": "1.0.0",
-  "description": "{{DESCRIPTION}}",
+  "description": "Parses ProPresenter files to extract the data",
   "main": "dist/main/index.js",
   "typings": "dist/main/index.d.ts",
   "module": "dist/module/index.js",
-  "homepage": "https://github.com/{{USER_NAME}}/{{PACKAGE_NAME}}#readme",
+  "homepage": "https://github.com/FiniteLooper/ProPresenter-Parser#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/{{USER_NAME}}/{{PACKAGE_NAME}}.git"
+    "url": "git+https://github.com/FiniteLooper/ProPresenter-Parser.git"
   },
   "bugs": {
-    "url": "https://github.com/{{USER_NAME}}/{{PACKAGE_NAME}}/issues"
+    "url": "https://github.com/FiniteLooper/ProPresenter-Parser/issues"
   },
   "keywords": [
   ],
@@ -40,6 +40,10 @@
       "ts"
     ],
     "preset": "ts-jest",
+    "reporters": [
+      "default",
+      "jest-html-reporter"
+    ],
     "rootDir": "./src",
     "testEnvironment": "node",
     "transform": {
@@ -51,16 +55,23 @@
       ]
     }
   },
+  "jest-html-reporter": {
+    "includeConsoleLog": true,
+    "includeFailureMsg": true,
+    "includeStackTrace": false
+  },
   "scripts": {
     "build": "npm run clean && npm run lint && npm run test:coverage && npm run build:main && npm run build:module",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "clean": "rimraf dist coverage",
+    "clean": "rimraf dist coverage test-report.html",
     "lint": "eslint --fix src/**/*.ts",
-    "test": "jest",
+    "test": "jest --reporters=default",
+    "test:html": "jest --reporters=jest-html-reporter --verbose=false",
     "test:coverage": "jest --coverage --coverageDirectory=../coverage",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "jest"
+    "watch:test": "jest --watch --reporters=default",
+    "watch:test:html": "jest --watch --reporters=jest-html-reporter --verbose=false"
   },
   "dependencies": {
   },
@@ -74,6 +85,7 @@
     "eslint-plugin-functional": "^5.0.8",
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0",
+    "jest-html-reporter": "^3.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
