--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
   "bugs": {
     "url": "https://github.com/ChrisMBarr/ProPresenter-Parser/issues"
   },
-  "keywords": ["ProPresenter", "church", "lyrics", "song", "pro4", "pro5", "pro6"],
+  "keywords": [
+    "ProPresenter",
+    "church",
+    "lyrics",
+    "song",
+    "pro4",
+    "pro5",
+    "pro6"
+  ],
   "files": [
     "LICENSE",
     "README.md",
@@ -70,32 +78,31 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "clean": "rimraf dist coverage test-report.html",
-    "lint": "eslint --fix src/**/*.ts",
+    "lint": "eslint --fix .",
     "test": "jest --reporters=default",
     "test:html": "jest --reporters=jest-html-reporter --verbose=false",
     "test:coverage": "jest --coverage --coverageDirectory=../coverage",
-    "update":"ncu -u && npm i",
+    "update": "ncu -u && npm i",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "jest --watch --reporters=default",
     "watch:test:html": "jest --watch --reporters=jest-html-reporter --verbose=false"
   },
   "dependencies": {
-    "fast-xml-parser": "^4.3.6",
+    "fast-xml-parser": "^4.4.0",
     "js-base64": "^3.7.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@types/node": "^20.13.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^6.5.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   }
 }
