--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "test": "jest --reporters=default",
     "test:html": "jest --reporters=jest-html-reporter --verbose=false",
     "test:coverage": "jest --coverage --coverageDirectory=../coverage",
-    "update": "npx npm-check-updates -u",
+    "update": "npx npm-check-updates -u && npm i",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "jest --watch --reporters=default",
     "watch:test:html": "jest --watch --reporters=jest-html-reporter --verbose=false"
