--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,8 @@
     ".cspell.json": false,
     ".editorconfig": true,
     ".prettierignore": true,
-    "coverage": false,
-    "dist": false,
+    "coverage": true,
+    "dist": true,
     "node_modules": true
   },
   "typescript.tsdk": "node_modules/typescript/lib",
